objects/Boarding_Form__c.object
<CustomObject>
    <fields>
        <fullName>GTR_2_Email_Source_Page__c</fullName>
        <label>GTR 2 Email Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Gender_Source_Page__c</fullName>
        <label>GTR 2 Gender Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Mailing_City_Source_Page__c</fullName>
        <label>GTR 2 Mailing City Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Mailing_Country_Source_Page__c</fullName>
        <label>GTR 2 Mailing Country Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Mailing_State_Source_Page__c</fullName>
        <label>GTR 2 Mailing State Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Mailing_Street_Source_Page__c</fullName>
        <label>GTR 2 Mailing Street Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Name_Source_Page__c</fullName>
        <label>GTR 2 Name Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Phone_Number_Source_Page__c</fullName>
        <label>GTR 2 Phone Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Postal_Code_Zip_Source_Page__c</fullName>
        <label>GTR 2 Postal Code/Zip Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Tax_ID_Number_Source_Page__c</fullName>
        <label>GTR 2 Tax ID Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_2_Tax_ID_Number_Type_Source_Page__c</fullName>
        <label>GTR 2 Tax ID Number Type Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Birthdate_Source_Page__c</fullName>
        <label>GTR 3 Birthdate Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Class_Code_Source_Page__c</fullName>
        <label>GTR 3 Class Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Contingent_Source_Page__c</fullName>
        <label>GTR 3 Contingent? Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Email_Source_Page__c</fullName>
        <label>GTR 3 Email Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Gender_Source_Page__c</fullName>
        <label>GTR 3 Gender Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Mailing_City_Source_Page__c</fullName>
        <label>GTR 3 Mailing City Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Mailing_Country_Source_Page__c</fullName>
        <label>GTR 3 Mailing Country Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Mailing_State_Source_Page__c</fullName>
        <label>GTR 3 Mailing State Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Mailing_Street_Source_Page__c</fullName>
        <label>GTR 3 Mailing Street Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Name_Source_Page__c</fullName>
        <label>GTR 3 Name Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Phone_Number_Source_Page__c</fullName>
        <label>GTR 3 Phone Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Postal_Code_Zip_Source_Page__c</fullName>
        <label>GTR 3 Postal Code/Zip Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Tax_ID_Number_Source_Page__c</fullName>
        <label>GTR 3 Tax ID Number Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTR_3_Tax_ID_Number_Type_Source_Page__c</fullName>
        <label>GTR 3 Tax ID Number Type Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuarantorReadyForSubmmit_SFDC2_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Garantor have the requiered fields populated for submmited for approval</description>
        <label>Guarantor Info Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Birthdate__c</fullName>
        <inlineHelpText>Only applicable to individuals. Source doc: Credit Authorization/Application (for individuals only).

*Enter the birth year directly in the text field; do not use the dropdown</inlineHelpText>
        <label>GTR 1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Class_Code__c</fullName>
        <inlineHelpText>Option C requires additional verification from https://apps.irs.gov/app/eos/. Provide screenshot from website of findings. A, B, or D: No additional source doc required.</inlineHelpText>
        <label>GTR 1 Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_1_Contingent__c</fullName>
        <inlineHelpText>Select Yes if this a recourse guaranty. Select No for non-recourse. Source doc: Guaranty agreement(s).</inlineHelpText>
        <label>GTR 1 Contingent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_1_Email__c</fullName>
        <inlineHelpText>The email address of the main point of contact for notices. Source doc (1 of the following): Loan Agreement, Note, other legal agreement, email confirmation from Guarantor, Credit Authorization/Application (for individuals only).</inlineHelpText>
        <label>GTR 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Gender__c</fullName>
        <inlineHelpText>Optional. Source doc: Credit Authorization/Application (for individuals only).</inlineHelpText>
        <label>GTR 1 Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Mailing_City__c</fullName>
        <label>GTR 1 Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Mailing_Country__c</fullName>
        <label>GTR 1 Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Mailing_Postal_Code_Zip__c</fullName>
        <label>GTR 1 Mailing Postal Code/Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Mailing_State__c</fullName>
        <label>GTR 1 Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Mailing_Street__c</fullName>
        <inlineHelpText>This is the address that notices will be sent to. Source doc (1 of the following): Guaranty Agreement, Note, SS-4, Credit Authorization/Application (for individuals only).</inlineHelpText>
        <label>GTR 1 Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Phone_Number__c</fullName>
        <inlineHelpText>The phone number of the main point of contact for notices. Source doc (1 of the following): Loan Agreement, Note, other legal agreement, email confirmation from Guarantor, Credit Authorization/Application (for individuals only).</inlineHelpText>
        <label>GTR 1 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guarantor_1_Tax_ID_Number_Type__c</fullName>
        <inlineHelpText>Source doc: SS-4, IRS TIN Verification. The IRS TIN Verification can be requested from C&amp;I Operations.</inlineHelpText>
        <label>GTR 1 Tax ID Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I - Individual</fullName>
                </value>
                <value>
                    <fullName>T - TIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_1_Tax_ID_Number__c</fullName>
        <inlineHelpText>Source doc (1 of the following): IRS TIN Verification, Credit Authorization/Application (for individuals only).  The IRS TIN Verification can be requested from C&amp;I Operations. If a foreign national, refer to BSA.</inlineHelpText>
        <label>GTR 1 Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Boarding form to Guarantor #1</description>
        <label>Guarantor 1</label>
        <referenceTo>Guarantor__c</referenceTo>
        <relationshipLabel>Boarding Forms</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Birthdate__c</fullName>
        <inlineHelpText>*Enter the birth year directly in the text field; do not use the dropdown</inlineHelpText>
        <label>GTR 2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Class_Code__c</fullName>
        <label>GTR 2 Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_2_Contingent__c</fullName>
        <label>GTR 2 Contingent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_2_Email__c</fullName>
        <label>GTR 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Gender__c</fullName>
        <inlineHelpText>Optional. Source doc: Credit Authorization/Application (for individuals only).</inlineHelpText>
        <label>GTR 2 Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Mailing_City__c</fullName>
        <label>GTR 2 Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Mailing_Country__c</fullName>
        <label>GTR 2 Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Mailing_Postal_Code_Zip__c</fullName>
        <label>GTR 2 Mailing Postal Code/Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Mailing_State__c</fullName>
        <label>GTR 2 Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Mailing_Street__c</fullName>
        <label>GTR 2 Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Name__c</fullName>
        <label>GTR 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Phone_Number__c</fullName>
        <label>GTR 2 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guarantor_2_Tax_ID_Number_Type__c</fullName>
        <label>GTR 2 Tax ID Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I - Individual</fullName>
                </value>
                <value>
                    <fullName>T - TIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_2_Tax_ID_Number__c</fullName>
        <label>GTR 2 Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Boarding form to Guarantor #2</description>
        <label>Guarantor 2</label>
        <referenceTo>Guarantor__c</referenceTo>
        <relationshipLabel>Boarding Forms (Guarantor 2)</relationshipLabel>
        <relationshipName>Boarding_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Birthdate__c</fullName>
        <inlineHelpText>*Enter the birth year directly in the text field; do not use the dropdown</inlineHelpText>
        <label>GTR 3 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Class_Code__c</fullName>
        <label>GTR 3 Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_3_Contingent__c</fullName>
        <label>GTR 3 Contingent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_3_Email__c</fullName>
        <label>GTR 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Gender__c</fullName>
        <inlineHelpText>Optional. Source doc: Credit Authorization/Application (for individuals only).</inlineHelpText>
        <label>GTR 3 Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Mailing_City__c</fullName>
        <label>GTR 3 Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Mailing_Country__c</fullName>
        <label>GTR 3 Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Mailing_Postal_Code_Zip__c</fullName>
        <label>GTR 3 Mailing Postal Code/Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Mailing_State__c</fullName>
        <label>GTR 3 Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Mailing_Street__c</fullName>
        <label>GTR 3 Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Name__c</fullName>
        <label>GTR 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Phone_Number__c</fullName>
        <label>GTR 3 Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guarantor_3_Tax_ID_Number_Type__c</fullName>
        <label>GTR 3 Tax ID Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I - Individual</fullName>
                </value>
                <value>
                    <fullName>T - TIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_3_Tax_ID_Number__c</fullName>
        <label>GTR 3 Tax ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Boarding form to Guarantor #3</description>
        <label>Guarantor 3</label>
        <referenceTo>Guarantor__c</referenceTo>
        <relationshipLabel>Boarding Forms (Guarantor 3)</relationshipLabel>
        <relationshipName>Boarding_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_4_Name__c</fullName>
        <label>GTR 4 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_GTR_1_Name__c</fullName>
        <inlineHelpText>This is the name of anyone guarantying the loan with BofI. This may be recourse or non-recourse. Source doc (1 of the following): Guaranty Agreement, SS-4, IRS TIN Verification. The IRS TIN Verification can be requested from C&amp;I Operations.</inlineHelpText>
        <label>GTR 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_GL_Account__c</fullName>
        <label>Holding GL Account #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IBase_SFDC2__c</fullName>
        <description>IBase for C&amp;I</description>
        <label>IBase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 – Interest accrued on 365/365</fullName>
                </value>
                <value>
                    <fullName>1 – Interest accrued on 360/360</fullName>
                </value>
                <value>
                    <fullName>2 – Interest accrued on 365/360</fullName>
                </value>
                <value>
                    <fullName>3 – Interest accrued on 360/30</fullName>
                </value>
                <value>
                    <fullName>4 – Interest amortized biweekly</fullName>
                </value>
                <value>
                    <fullName>5 – interest amortized monthly</fullName>
                </value>
                <value>
                    <fullName>7 – Interest accrued on Schedule Bal 365/365</fullName>
                </value>
                <value>
                    <fullName>9 – interest is Add-On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>Hidden field used to capture email address of user who submits BF for approval (populated from Approval process) and used to send email notification after BF is approved/rejected</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LTV_Source_Page__c</fullName>
        <label>LTV Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>LTV</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount_Source_Page__c</fullName>
        <label>Line Amount Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <inlineHelpText>The total line of credit amount. Source doc: Loan Agreement, other legal agreement.</inlineHelpText>
        <label>Line Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Account_Information_Ready__c</fullName>
        <description>checked when all the required fields for sending for Approval are populated</description>
        <formula>AND( NOT ( ISBLANK(Loan_Number__c ) || ISNULL(Loan_Number__c ) ), 
     NOT ( ISBLANK(Loan_Number_Source_Page__c) || ISNULL(Loan_Number_Source_Page__c ) ),
     NOT ( ISBLANK(text(Risk_Rating__c) )      || ISNULL(text(Risk_Rating__c) ) ) ,
     NOT ( ISBLANK(Risk_Rating_Source_Page__c) || ISNULL(Risk_Rating_Source_Page__c ) ) ,  
     NOT ( ISBLANK(text(Branch_Number__c) )      || ISNULL(text(Branch_Number__c) ) ) , 
     NOT ( ISBLANK(Branch_Number_Source_Page__c) || ISNULL(Branch_Number_Source_Page__c) ), 
     NOT ( ISBLANK(Relationship_Manager__c) || ISNULL(Relationship_Manager__c) ) , 
     NOT ( ISBLANK(Relationship_Manager_Source_Page__c) || ISNULL(Relationship_Manager_Source_Page__c) ), 
     NOT ( ISBLANK(Primary_Analyst__c) || ISNULL(Primary_Analyst__c) ), 
     NOT ( ISBLANK(Primary_Analyst_Source_Page__c) || ISNULL(Primary_Analyst_Source_Page__c) ) , 
     NOT ( ISBLANK(text(C_I_Loan_Type__c) )      || ISNULL(text(C_I_Loan_Type__c) ) ) ,
     NOT ( ISBLANK(C_I_Loan_Type_Source_Page__c) || ISNULL(C_I_Loan_Type_Source_Page__c) ), 
     NOT ( ISBLANK(text(Purpose_Code__c) )      || ISNULL(text(Purpose_Code__c) ) ) ,
     NOT ( ISBLANK(Purpose_Code_Source_Page__c) || ISNULL(Purpose_Code_Source_Page__c) ) ,  
     NOT ( ISBLANK(text(Collateral_Code_Description__c) )      || ISNULL(text(Collateral_Code_Description__c) ) ) ,
     NOT ( ISBLANK(Coll_Code_Description_Source_Page__c) || ISNULL(Coll_Code_Description_Source_Page__c) ), 
     NOT ( ISBLANK(text(Call_Report_Code__c) )      || ISNULL(text(Call_Report_Code__c) ) ) ,
     NOT ( ISBLANK(Call_Report_Code_Source_Page__c) || ISNULL(Call_Report_Code_Source_Page__c ) ),
     NOT ( ISBLANK(text(Loan_Class_Code__c) )      || ISNULL(text(Loan_Class_Code__c) ) ) ,
     NOT ( ISBLANK(Loan_Class_Code_Source_Page__c) || ISNULL(Loan_Class_Code_Source_Page__c) ) ,  
     NOT ( ISBLANK(NAICS_Code__c) || ISNULL(NAICS_Code__c) ) , 
     NOT ( ISBLANK(NAICS_Code_Source_Page__c) || ISNULL(NAICS_Code_Source_Page__c) ), 
     NOT ( ISBLANK(Loan_Amount__c) || ISNULL(Loan_Amount__c) ), 
     NOT ( ISBLANK(Loan_Amount_Source_Page__c) || ISNULL(Loan_Amount_Source_Page__c) ) , 
     NOT ( ISBLANK(text(Loan_Term_months__c) )      || ISNULL(text(Loan_Term_months__c) ) ) ,
     NOT ( ISBLANK(Loan_Term_months_Source_Page__c) || ISNULL(Loan_Term_months_Source_Page__c) ), 
     NOT ( ISBLANK(text(Origination_Date_note_date__c) )      || ISNULL(text(Origination_Date_note_date__c) ) ) ,
     NOT ( ISBLANK(Origination_Date_Source_Page__c) || ISNULL(Origination_Date_Source_Page__c) ) ,  
     NOT ( ISBLANK(text(Maturity_Date__c) )      || ISNULL(text(Maturity_Date__c) ) ) ,
     NOT ( ISBLANK(Maturity_Date_Source_Page__c) || ISNULL(Maturity_Date_Source_Page__c) ),
     NOT ( ISBLANK(Projected_Initial_Funding__c)      || ISNULL(Projected_Initial_Funding__c)  ) ,
     NOT ( ISBLANK(Projected_Initial_Funding_Source_Page__c) || ISNULL(Projected_Initial_Funding_Source_Page__c) ), 
     NOT ( ISBLANK(Term_Code__c)       || ISNULL(Term_Code__c)  ) ,
     NOT ( ISBLANK(Term_Code_Source_Page__c) || ISNULL(Term_Code_Source_Page__c) ) ,  
     NOT ( ISBLANK(text(Funding_Date__c) )      || ISNULL(text(Funding_Date__c) ) ) ,
     NOT ( ISBLANK(Funding_Date_Source_Page__c) || ISNULL(Funding_Date_Source_Page__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan &amp; Account Info Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Loan_Amount__c</description>
        <inlineHelpText>Max credit facility being offered to the Borrower. Support doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.</inlineHelpText>
        <label>Loan Amount *</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Class_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Class_Code__c</fullName>
        <inlineHelpText>The loan should fall under the same class code as Borrower 1. No additional support required.</inlineHelpText>
        <label>Loan Class Code *</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A – Personal</fullName>
                </value>
                <value>
                    <fullName>B – Business Profit</fullName>
                </value>
                <value>
                    <fullName>C – Business Non-Profit</fullName>
                </value>
                <value>
                    <fullName>D – Employee/Direct Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Number_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <description>Default set by trigger from Opp. field
CI_Loan_Number__c</description>
        <label>Loan Number *</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Term_months_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Term_months__c</fullName>
        <inlineHelpText># of months in loan term</inlineHelpText>
        <label>Loan Term (months) *</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Code__c</fullName>
        <inlineHelpText>The group that originated and will monitor the loan.For Bridge Lending select PWBD1. For Lender Finance select SSLF2.</inlineHelpText>
        <label>Management Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PWBD1</fullName>
                </value>
                <value>
                    <fullName>SSLF2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maturity_Date_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <inlineHelpText>Date the loan will become due and payable, prior to any extension agreements taking place. Source doc (1 of the following): Note, Loan Agreement, other legal agreement executed by both BofI and Borrower.</inlineHelpText>
        <label>Maturity Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message_Loan_Account__c</fullName>
        <description>Message information for the User to know if the section is ready for submmited for approval</description>
        <formula>IF( Loan_Account_Information_Ready__c , 
     &quot;Required Fields in the Loan &amp; Account section have been populated&quot;, 
     &quot;Please fill out all &apos;*&apos; required fields along with their corresponding Source &amp; Page&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Payment__c</fullName>
        <formula>IF( Payment_Ready__c , 
  &quot;Required Fields in the Payment Info section have been populated&quot;, 
  &quot;Please fill out all &apos;*&apos; required fields along with their corresponding Source &amp; Page&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Rate__c</fullName>
        <formula>IF( Rate_Ready__c , 
  &quot;Required Fields in the Rate Info section have been populated&quot;, 
  &quot;Please fill out all &apos;*&apos; required fields along with their corresponding Source &amp; Page&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_Source_Page__c</fullName>
        <label>Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>Default set by trigger from Opp. field 
CI_NAICS_Index__c</description>
        <inlineHelpText>Industry/Line of Business classification code. Support doc: Final CAM</inlineHelpText>
        <label>NAICS Code *</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Due_Date_Source_Page__c</fullName>
        <label>Next Due Date Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Due_Date__c</fullName>
        <inlineHelpText>This will be the same as the First Payment Date</inlineHelpText>
        <label>Next Due Date *</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldBFStatus__c</fullName>
        <description>Save the old Status for BF Status picklist field</description>
        <label>OldBFStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppLink__c</fullName>
        <description>Link for Opp in Boarding Form</description>
        <formula>LEFT($Api.Partner_Server_URL_410, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))&amp;Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>Populated when BF is created from Opportunity Owner</description>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Used to provide ability to display BF on Opportunity page layout easily through related list.</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>startsWith</operation>
                <value>C&amp;I, EQF, CRESL, Factoring, NRELF, RELF</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Boarding Forms</relationshipLabel>
        <relationshipName>Boarding_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Original_Line_Amount_Source_Page__c</fullName>
        <label>Original Line Amount Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Line_Amount__c</fullName>
        <inlineHelpText>This will be the same as the Line Amount</inlineHelpText>
        <label>Original Line Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Term_Code_Source_Page__c</fullName>
        <label>Original Term/Code Source &amp; Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>